feat: dashboard refactor with grafana plugin enviroment
